--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ frontend/frontend/package-lock.json
 backend/yarn.lock
 frontend/frontend/yarn.lock
 /backend/node_modules
+/frontend/frontend/node_modules
